# innowise_laboratory

lecture_1/: pyproject.toml
lecture_2/: main.py  pyproject.toml
lecture_3/: main.py
lecture_4/: queries.sql  school.db
